--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  crypto: ^3.0.3
   dio: ^5.8.0+1
   flutter_riverpod: ^2.6.1
   flutter_widget_from_html: ^0.17.1
